<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterActivity">

    <data>
        <variable
            name="activity"
            type="es.travelWorld.traveling.RegisterActivity" />

        <variable
            name="modelView"
            type="es.travelWorld.traveling.domain.User" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/register_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/registro_activity_menu"
                app:navigationIcon="@drawable/ic_baseline_arrow_forward_24"
                android:background="?attr/colorPrimary"
                app:title="@string/register_name"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_reg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/img_registro" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/camera_reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/white"
                    app:layout_constraintBottom_toBottomOf="@id/img_reg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/ic_baseline_camera_alt_24" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nombre_reg"
                    style="?attr/appTravelingOutLineBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:hint="@string/name"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_reg"
                    app:startIconContentDescription="@string/icon"
                    app:startIconDrawable="@drawable/ic_baseline_face_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nombre_set"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onTextChanged="@{(nombre,start,count,after)->activity.textNombreChanged(nombre)}"
                        android:text="@={modelView.nombre}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/apellido_reg"
                    style="?attr/appTravelingOutLineBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:hint="@string/apellido"
                    android:icon="@drawable/ic_baseline_face_24"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nombre_reg"
                    app:startIconContentDescription="@string/icon"
                    app:startIconDrawable="@drawable/ic_baseline_face_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/apellido_set"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onTextChanged="@{(apellido,start,count,after)->activity.textApellidoChanged(apellido)}"
                        android:text="@={modelView.apellido}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edad_reg"
                    style="?attr/appTravelingOutLineDropBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/apellido_reg">

                    <AutoCompleteTextView
                        android:id="@+id/registroDropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edad"
                        android:inputType="none"
                        app:layout_constraintBottom_toBottomOf="@id/edad_reg" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/main_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:gravity="center"
                    android:text="@string/meapunto"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edad_reg" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_politica"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="10dp"
                    android:gravity="start"
                    android:text="@string/politica"
                    app:layout_constraintEnd_toStartOf="@id/tv_condiciones"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/main_login" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_condiciones"
                    style="?appTravelingB2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="10dp"
                    android:gravity="end"
                    android:text="@string/condiciones"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_politica"
                    app:layout_constraintTop_toBottomOf="@id/main_login" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>